get method per utenti

--- a/gui/app/templates/index.html
+++ b/gui/app/templates/index.html
@@ -4,15 +4,15 @@
 <div class="jumbotron">
   <h1>News RecSys</h1>
   <p class="lead">Choose a user: </p>
-  <p>User 0 -> <a href="/u0">Daniele</a></p>
-  <p>User 1 -> <a href="/u1">Manuel</a></p>
-  <p>User 2 -> <a href="/u2">Lucrezia</a></p>
-  <p>User 3 -> <a href="/u3">Lidia</a></p>
-  <p>User 4 -> <a href="/u4">Gabriella</a></p>
-  <p>User 5 -> <a href="/u5">Marco</a></p>
-  <p>User 6 -> <a href="/u6">Fabio</a></p>
-  <p>User 7 -> <a href="/u7">Antonio</a></p>
-  <p>User 8 -> <a href="/u8">Matteo</a></p>
-  <p>User 9 -> <a href="/u9">Federico</a></p>
+  <p>User 0 -> <a href="/user?id=0">Daniele</a></p>
+  <p>User 1 -> <a href="/user?id=1">Manuel</a></p>
+  <p>User 2 -> <a href="/user?id=2">Lucrezia</a></p>
+  <p>User 3 -> <a href="/user?id=3">Lidia</a></p>
+  <p>User 4 -> <a href="/user?id=4">Gabriella</a></p>
+  <p>User 5 -> <a href="/user?id=5">Marco</a></p>
+  <p>User 6 -> <a href="/user?id=6">Fabio</a></p>
+  <p>User 7 -> <a href="/user?id=7">Antonio</a></p>
+  <p>User 8 -> <a href="/user?id=8">Matteo</a></p>
+  <p>User 9 -> <a href="/user?id=9">Federico</a></p>
 </div>
 {% endblock %}
