bottoni categorie & scrappy2

--- a/gui/app/templates/base.html
+++ b/gui/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>{% block title %}{% endblock %}</title>
-	<script type = "text/javascript" src = "/static/utilita.js"></script> 
+	<!-- <script type = "text/javascript" src = "/static/utilita.js"></script>  -->
 	<!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
