--- a/gui/app/templates/error.html
+++ b/gui/app/templates/error.html
@@ -4,5 +4,6 @@
 <div class="jumbotron">
   <h1>Error!</h1>
   <p class="lead">Backend is silent</p>
+  <img src="/static/images/boni.jpg" id="boni"/>
 </div>
 {% endblock %}
