--- a/gui/app/templates/base.html
+++ b/gui/app/templates/base.html
@@ -6,11 +6,12 @@
 	<script type="text/javascript" src="//d3js.org/d3.v4.min.js"></script>
 	<script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?2.1.3"></script>
 	<script type="text/javascript" src="http://mbostock.github.com/d3/d3.geom.js?2.1.3"></script>
-    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.layout.js?2.1.3"></script>
+	<script type="text/javascript" src="http://mbostock.github.com/d3/d3.layout.js?2.1.3"></script>
+	<link rel="stylesheet" href="/static/bootstrap.min.css">
 	<!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Custom styles for this template -->
-	<link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+	<!-- <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet"> -->
 	<!---->
 	<style>
 		svg {
