--- a/gui/app/templates/base.html
+++ b/gui/app/templates/base.html
@@ -22,16 +22,16 @@
   </head>
   <body>
     <div class="container">
-<!--  <div class="header clearfix">
+	<div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="/">Home</a></li>
-			<li role="presentation"><a href="/about">About</a></li>
+			<!-- <li role="presentation"><a href="/about">About</a></li>
 			<li role="presentation"><a href="/boni">Tate boni</a></li>
-            <li role="presentation"><a href="http://flask.pocoo.org" target="_blank">More About Flask</a></li>
+            <li role="presentation"><a href="http://flask.pocoo.org" target="_blank">More About Flask</a></li> -->
           </ul>
         </nav>
-      </div>-->
+      </div>
       {% block body %}
       {% endblock %}
       <footer class="footer">
